--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -1,18 +1,21 @@
-<!--
-  Generated template for the HelpPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<!--<ion-header>
-
-  <ion-navbar>
-    <ion-title>help</ion-title>
+<ion-header>
+  <ion-navbar color="primary">
+    <ion-title>About & Help</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content class="tutorial-page">
 
-<ion-content padding>
+  <div class="spacer" style="height:150px;"></div>
 
-</ion-content>-->
+    <ion-list>
+      <ion-item style="text-align: center">
+        Need more help?<br><br>
+        Download User Manual 
+   <div class="spacer" style="height:20px;"></div>
+
+        <a href = "https://attendance.co.ke/manual.pdf"><button ion-button medium style="height: 40px; width: 150px;">User Manual</button></a>
+      </ion-item>
+  </ion-list>
+
+</ion-content>
