Graduation Page Done

--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -40,15 +40,22 @@
       Add / Edit Students
     </button>
 
-     <button (click)="promotestudents()" ion-item>
-      <ion-icon name="arrow-dropup-circle" item-left></ion-icon>
-      Promote / Move Students
-    </button>
-
-      <button (click)="studentdetails()" ion-item>
+    <button (click)="studentdetails()" ion-item>
       <ion-icon name="list-box" item-left></ion-icon>
       View Student details
     </button>
+
+     <button (click)="movestudents()" ion-item>
+      <ion-icon name="md-swap" item-left></ion-icon>
+     Move Students
+    </button>
+
+    <button (click)="promotestudents()" ion-item>
+      <ion-icon name="arrow-dropup-circle" item-left></ion-icon>
+      Promote Students
+    </button>
+
+    
 
 
     </ion-list>
