--- a/src/pages/headteacher/promote/promote.html
+++ b/src/pages/headteacher/promote/promote.html
@@ -7,7 +7,7 @@
 <ion-header>
 
       <ion-navbar color="primary">
-            <ion-title>Promote / Move <small *ngIf="selectedclass">({{selectedclass.class_name}})</small> </ion-title>
+            <ion-title>Promote Students <small *ngIf="selectedclass">({{selectedclass.class_name}})</small> </ion-title>
 
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
@@ -145,7 +145,7 @@
 
 
       <div>
-            <button [disabled]="load" ion-button block (click)="promote()">{{load?'Moving students ...':'Promote / Move'}}  </button>
+            <button [disabled]="load" ion-button block (click)="promote()">{{load?'Moving students ...':'Move Students'}}  </button>
       </div>
 
       <!--<diV *ngIf="classes">
