--- a/src/pages/graduate/graduate.html
+++ b/src/pages/graduate/graduate.html
@@ -102,13 +102,9 @@
       <!-- <div class="spacer" style="height: 10px;"></div> -->
 
       <button *ngIf="!promote_school" (click)="promote('new')" ion-button block>Confirm Promotion</button>
-
-      <ion-item>
-            <button *ngIf="promote_school && !promote_school.completed" (click)="promote('update')" ion-button >Update Promotion</button>
-            <button *ngIf="promote_school && !promote_school.completed" (click)="completeConfirm('Complete')" ion-button >Complete Promotion</button>
-            <button *ngIf="promote_school && promote_school.completed" (click)="completeConfirm('Undo')" ion-button >Undo Promotion</button>
-
-      </ion-item>
+   <!-- <button *ngIf="promote_school && !promote_school.completed" (click)="promote('update')" ion-button >Update Promotion</button> -->
+            <button *ngIf="promote_school && !promote_school.completed" (click)="completeConfirm('Complete')" ion-button block>Complete Promotion</button>
+            <button *ngIf="promote_school && promote_school.completed" (click)="completeConfirm('Undo')" ion-button block>Undo Promotion</button>
 
 
 
