segregated the students count

--- a/src/pages/headteacher/classes/classes.html
+++ b/src/pages/headteacher/classes/classes.html
@@ -21,7 +21,7 @@
                         <ion-badge item-right>{{i+1}}</ion-badge>{{class.class_name}} 
                         <div class="spacer" style="height: 4px;"></div>
 
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{class.students.length}} Students</p>
+                        <p style="font-size: 13px;">&nbsp;  {{ getstudentsnumber(class.students,"M")}} Male{{getstudentsnumber(class.students,"M")==1?'':'s'}} &nbsp; {{ getstudentsnumber(class.students,"F")}} Female{{getstudentsnumber(class.students,"F")==1?'':'s'}}</p>
 
                   </ion-label>
 
