--- a/src/pages/headteacher/promote/promote.html
+++ b/src/pages/headteacher/promote/promote.html
@@ -7,7 +7,7 @@
 <ion-header>
 
       <ion-navbar color="primary">
-            <ion-title>Promote Students <small *ngIf="selectedclass">({{selectedclass.class_name}})</small> </ion-title>
+            <ion-title>Move Students <small *ngIf="selectedclass">({{selectedclass.class_name}})</small> </ion-title>
 
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
