--- a/src/pages/headteacher/teachers/addteacher.html
+++ b/src/pages/headteacher/teachers/addteacher.html
@@ -63,7 +63,7 @@
     </ion-item>
     <div class="spacer" style="height:5px;"></div>
     <ion-item>
-      <ion-label floating>Phone Number</ion-label>
+      <ion-label floating>Phone Number (Used to login)</ion-label>
       <ion-input formControlName="phone_no"></ion-input>
     </ion-item>
     <div class="spacer" style="height:5px;"></div>
