My Student Gender

--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -29,8 +29,8 @@
   </ion-row>-->
   <ion-card color="primary">
     <ion-card-header>
-      Students
-      <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 15%"> Males :{{schoolinfo.studs.total_males}} Females:{{schoolinfo.studs.total_females}} Total:{{schoolinfo.students}}</ion-badge>
+      Students &nbsp;
+      <ion-badge *ngIf="schoolinfo" color="white"> Males:{{schoolinfo.studs.total_males}} Females:{{schoolinfo.studs.total_females}} Total:{{schoolinfo.students}}</ion-badge>
     </ion-card-header>
 
     <ion-list>
