Adding Other Reason to Delete

--- a/src/pages/headteacher/students/addstudent.html
+++ b/src/pages/headteacher/students/addstudent.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title><span *ngIf="type"> {{type=="add"?'Add':"Update"}}</span> Student</ion-title>
     <ion-buttons end>
       <button ion-button small outline (click)="dismiss()">
