--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,8 @@
             <ion-title>Mark Attendance <small *ngIf="classes.length >0">( {{classes[index].class_name}})</small> </ion-title>
             </div>
 
-            <ion-buttons end>
-                  <button ion-button (click)="presentPopover($event)">
+            <ion-buttons (click)="presentPopover($event)" end>
+                  <button ion-button >
                   <ion-icon name="more"></ion-icon>
                   </button>
             </ion-buttons>
