--- a/src/pages/headteacher/students/addstudent.html
+++ b/src/pages/headteacher/students/addstudent.html
@@ -38,10 +38,10 @@
     </ion-item>
 
     <div class="spacer" style="height:10px;"></div>
-    <ion-item (click)="showCalendar()">
+    <ion-item (click)="showdobCalendar()">
       <ion-label class = "mylabels" style="font-size:14px;">Date of Birth
       <ion-icon name='calendar' style="color: #d03e84; margin-left:33%" ></ion-icon>
-       &nbsp; {{event|date}} <br>
+       &nbsp; {{dob|date}} <br>
       </ion-label>
       <br><br>
     </ion-item>
